fixed flex width

--- a/font/_flaticon.scss
+++ b/font/_flaticon.scss
@@ -1,6 +1,6 @@
     /*
     Flaticon icon font: Flaticon
-    Creation date: 02/06/2020 13:41
+    Creation date: 02/06/2020 16:11
     */
 
     @font-face {
@@ -37,10 +37,10 @@
   font-smoothing: antialiased;
     }
 
-    .flaticon-mail:before { content: "\f100"; }
+    .flaticon-sync:before { content: "\f100"; }
 .flaticon-reply:before { content: "\f101"; }
 .flaticon-verified:before { content: "\f102"; }
     
-    $font-Flaticon-mail: "\f100";
+    $font-Flaticon-sync: "\f100";
     $font-Flaticon-reply: "\f101";
     $font-Flaticon-verified: "\f102";
