--- a/font/flaticon.css
+++ b/font/flaticon.css
@@ -1,6 +1,6 @@
 	/*
   	Flaticon icon font: Flaticon
-  	Creation date: 02/06/2020 13:41
+  	Creation date: 02/06/2020 16:11
   	*/
 
 @font-face {
@@ -25,12 +25,12 @@
 [class^="flaticon-"]:before, [class*=" flaticon-"]:before,
 [class^="flaticon-"]:after, [class*=" flaticon-"]:after {   
   font-family: Flaticon;
-        font-size: 20px;
+        font-size: 40px;
 font-style: normal;
 margin-left: 20px;
-color: rgb(21, 21, 189);
+color: rgb(221, 12, 176);
 }
 
-.flaticon-mail:before { content: "\f100"; }
+.flaticon-sync:before { content: "\f100"; }
 .flaticon-reply:before { content: "\f101"; }
 .flaticon-verified:before { content: "\f102"; }
