--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
-/* * {
+* {
   box-sizing: border-box;
-} */
-body {
-  width: 100%;
-  max-width: 100%;
-  text-align: center;
-  
+  padding: 10px;
+  margin: 0;
+  font-family: "Open Sans", sans-serif;
 }
+body {
+  font-family: "Open Sans", sans-serif;
+  width: 90vw;
+  max-width: 90vw;
+  margin: 0 auto;
+}
+
 .head {
   display: flex;
   justify-content: space-between;
@@ -41,7 +45,10 @@ body {
   text-transform: capitalize;
   padding: 5px;
   margin: 5px;
-  color: rgb(2, 2, 49);
+  color: rgb(51, 5, 82);
+}
+.active{
+  color: rgb(150, 25, 150);
 }
 .nav-bar ul li a:hover {
   color: rgb(150, 25, 150);
@@ -72,7 +79,7 @@ nav-bar ul li a:active {
   justify-content: center;
   align-content: center;
   margin-bottom: 30px;
-  background-color: rgb(238, 229, 229);
+  background-color: rgb(255, 255, 255);
 }
 
 .details {
@@ -92,26 +99,28 @@ nav-bar ul li a:active {
 }
 
 .hero-contact {
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
-  width: 50%;
+ 
+  width: 100%;
   border-radius: 50px;
   height: 50px;
   border: 2px solid grey;
-  position: relative;
-  left: 20%;
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
+  align-content: center;
+  
 }
 
 .hero-contact button {
   text-align: center;
-  height: 44px;
-  border-radius: 44px;
+  height: 40px;
+  border-radius: 40px;
   background-color: rgb(247, 0, 255);
   color: white;
   width: 30%;
   border: 2px solid grey;
-
+  position: relative;
+  bottom: 20%;
 }
 
 .hero-img {
@@ -121,9 +130,10 @@ nav-bar ul li a:active {
 }
 
 .hero-img img {
-  flex: 0 0 50%;
-  width: 150px;
-  height: 250px;
+  width: 100%;
+  height: 30%;
+  padding: 0;
+  margin: 0;
 }
 
 .info {
@@ -163,11 +173,14 @@ nav-bar ul li a:active {
 .help-details {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
+  align-content: space-between;
+  padding: 10px;
   text-align: center;
-  width: 30%;
+  width: 25%;
   position: relative;
   box-shadow: 5px 5px 5px 5px rgb(197, 192, 192);
-  height: 10em;
+  height: 15em;
 }
 
 .img {
@@ -175,19 +188,15 @@ nav-bar ul li a:active {
   text-align: center;
 }
 
-.img img {
-  width: 50px;
-  height: 20px;
-}
-
-.help-details button {
+#btn {
+  width: 120px;
   height: 30px;
   border-radius: 30px;
-  width: 30%;
-  word-wrap: break-word;
-  border: 2px solid grey;
-  position: relative;
-  left: 35%;
+  text-decoration: none;
+  text-align: center;
+  border: 2px solid rgb(211, 207, 207);
+  display: inline-block;
+  vertical-align: middle;
 }
 @media screen and (max-width: 480px) {
   .container-help {
@@ -208,7 +217,7 @@ nav-bar ul li a:active {
 
 .support {
   display: block;
-  background-color: rgb(231, 224, 216);
+  background-color: rgb(255, 255, 255);
   padding-top: 30px;
 }
 
@@ -228,7 +237,6 @@ nav-bar ul li a:active {
   display: flex;
   justify-content: space-between;
   align-content: space-between;
-
 }
 
 .col-1 {
@@ -241,10 +249,10 @@ nav-bar ul li a:active {
 }
 
 .col-2 img {
-  width: 90%;
+  width: 100%;
   height: auto;
   border-radius: 10px;
-  box-shadow: 5px 5px 5px 5px rgb(180, 174, 174);
+  box-shadow: 5px 5px 5px 5px rgb(170, 168, 170);
   position: relative;
   left: 7%;
 }
@@ -278,7 +286,7 @@ nav-bar ul li a:active {
 /* integrations */
 .software {
   display: block;
- width: 100%;
+  width: 100%;
   padding-top: 30px;
 }
 .software-detail {
@@ -303,7 +311,7 @@ nav-bar ul li a:active {
   flex: 0 0 30%;
 }
 .col-3 img {
-  width: 80%;
+  width: 100%;
   height: auto;
 }
 .col-4 {
@@ -313,11 +321,16 @@ nav-bar ul li a:active {
 }
 .card-row {
   flex: 0 0 28%;
-  flex-wrap: wrap;
   margin: 10px;
   border-radius: 20px;
   background-color: rgb(243, 240, 247);
   padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
 }
 @media screen and (max-width: 480px) {
   .con-software {
