--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
 }
 
 .logo img {
-  width: 80px;
-  height: 50px;
+  width: 100%;
+  height: auto;
   position: relative;
   left: 30%;
 }
@@ -115,7 +115,7 @@ nav-bar ul li a:active {
   text-align: center;
   height: 40px;
   border-radius: 40px;
-  background-color: rgb(247, 0, 255);
+  background-color: rgb(92, 38, 219);
   color: white;
   width: 30%;
   border: 2px solid grey;
@@ -138,6 +138,13 @@ nav-bar ul li a:active {
 
 .info {
   text-align: center;
+}
+.logos{
+  display: flex;
+  justify-self: space-between;
+  align-content: space-between;
+  justify-content: space-between;
+  width: 100%;
 }
 @media screen and (max-width: 480px) {
   .hero {
@@ -180,7 +187,7 @@ nav-bar ul li a:active {
   width: 25%;
   position: relative;
   box-shadow: 5px 5px 5px 5px rgb(197, 192, 192);
-  height: 15em;
+ 
 }
 
 .img {
@@ -189,15 +196,17 @@ nav-bar ul li a:active {
 }
 
 #btn {
-  width: 120px;
-  height: 30px;
-  border-radius: 30px;
-  text-decoration: none;
   text-align: center;
-  border: 2px solid rgb(211, 207, 207);
-  display: inline-block;
-  vertical-align: middle;
+  height: 40px;
+  border-radius: 40px;
+  background-color: rgb(92, 38, 219);
+  color: white;
+  width: 50%;
+  border: 2px solid grey;
+  position: relative;
+  bottom: 20%;
 }
+
 @media screen and (max-width: 480px) {
   .container-help {
     display: flex;
@@ -216,14 +225,16 @@ nav-bar ul li a:active {
 /* support */
 
 .support {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: rgb(255, 255, 255);
   padding-top: 30px;
 }
 
 .support-detail {
   display: block;
-  width: 100%;
+  width: 50%;
   text-align: center;
   padding: 10px;
   margin: 10px;
@@ -251,8 +262,6 @@ nav-bar ul li a:active {
 .col-2 img {
   width: 100%;
   height: auto;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px 5px rgb(170, 168, 170);
   position: relative;
   left: 7%;
 }
@@ -285,13 +294,15 @@ nav-bar ul li a:active {
 }
 /* integrations */
 .software {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   padding-top: 30px;
 }
 .software-detail {
   display: block;
-  width: 100%;
+  width: 50%;
   text-align: center;
   padding: 10px;
   margin: 10px;
